--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,10 +21,11 @@
                 "--sample_rate=16000",
                 "--length=5",
                 "--batch_size=10",
-                "--executions=10",
+                "--executions=1",
                 "--in_dir=in/notifications",
                 "--out_dir=out",
-                "--deviation=0.9,1.1"
+                "--deviation=0.9,1.1",
+                "--pitch=0.6"
             ],
             "console": "integratedTerminal"
         }
